feat(homepage): 增加背景

--- a/themes/fexo/layout/_partial/home.ejs
+++ b/themes/fexo/layout/_partial/home.ejs
@@ -1,3 +1,4 @@
+<div class="bg"></div>
 <div class="content-home text-center">
   <a class="avatar" href="/">
     <img src="<%= theme.avatar %>" alt="" />
