--- a/themes/fexo/source/sass/pages/_home.scss
+++ b/themes/fexo/source/sass/pages/_home.scss
@@ -1,3 +1,13 @@
+.bg {
+  background-image: url('/images/banboo.png');
+  background-repeat: no-repeat;
+  background-position: top right;
+  height: 500px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 .content-home {
   position: absolute;
   top: 50%;
@@ -6,6 +16,7 @@
   height: 300px;
   margin-top: -150px;
   margin-bottom: 100px;
+
   .avatar {
     img {
       display: inline-block;
