引入 「漢字標準格式」

--- a/themes/fexo/layout/_partial/duoshuo.ejs
+++ b/themes/fexo/layout/_partial/duoshuo.ejs
@@ -1,3 +1,4 @@
+<% if (theme.duoshuo_shortname){ %>
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"<%=theme.duoshuo_shortname%>"};
@@ -11,3 +12,4 @@ var duoshuoQuery = {short_name:"<%=theme.duoshuo_shortname%>"};
 })();
 </script>
 <!-- 多说公共JS代码 end -->
+<% } %>
