--- a/themes/fexo/layout/layout.ejs
+++ b/themes/fexo/layout/layout.ejs
@@ -4,4 +4,5 @@
   <%- partial('_partial/disqus') %>
   <%- partial('_partial/duoshuo') %>
 </body>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/Han/3.2.7/han.min.js"></script>
 </html>
