--- a/themes/fexo/layout/_partial/head.ejs
+++ b/themes/fexo/layout/_partial/head.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cmn-Hans" class="han-init">
 <head>
   <meta charset="utf-8">
   <%
@@ -47,4 +47,7 @@
 
   <%- partial('google-analytics') %>
   <%- partial('baidu-analytics') %>
+
+  <link rel="stylesheet" media="all" href="//cdnjs.cloudflare.com/ajax/libs/Han/3.2.7/han.min.css">
+
 </head>
